--- a/sysdrv/tools/board/buildroot/luckfox_pico_w_defconfig
+++ b/sysdrv/tools/board/buildroot/luckfox_pico_w_defconfig
@@ -85,7 +85,7 @@ BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_PPPD_FILTER=y
 BR2_PACKAGE_PPPD_RADIUS=y
 BR2_PACKAGE_RSYNC=y
-# BR2_PACKAGE_SAMBA4 is not set
+BR2_PACKAGE_SAMBA4=y
 BR2_PACKAGE_SOCAT=y
 BR2_PACKAGE_BASH=y
 BR2_PACKAGE_BASH_LOADABLE_EXAMPLES=y
